--- a/index.css
+++ b/index.css
@@ -215,9 +215,14 @@ width: 47%;
   h2{
     font-size: 1em;
   }
+  .wind-container1{
+width:90%}
+   .wind-container2{
+width:90%}
   .windbox{
     font-size: 0.5em;
     gap: 2vmin;
+    width:80%;
  /* padding: 0.95em; */
   }
   .feel-like{
@@ -244,6 +249,7 @@ width: 47%;
     font-size: 0.75em;
   }
   .wind{
+    flex-direction:coloumn;
     padding:0 0.5em;
   }
  .current-conditions-body{
